Fix card size on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,3 @@
-* {
-  border: 1px solid rebeccapurple;
-}
 .options button {
   margin: 5px;
 }
